--- a/app/views/performance_sets/roster.html.erb
+++ b/app/views/performance_sets/roster.html.erb
@@ -1,4 +1,4 @@
-<% @instrument_groups = organize_members_by_instrument(@performance_set, @member_sets) %>
+<% @instrument_groups = organize_members_by_instrument(@member_sets) %>
 <div class='pageHeader'><h2>Roster for <%= @performance_set.extended_name %></h2></div>
 
 <div class='listDescription'>
