Fix recipient list when emailing from home screen

--- a/app/views/emails/_form.html.erb
+++ b/app/views/emails/_form.html.erb
@@ -69,6 +69,7 @@
         }
         $(document).on('ready', function() {
           setInstrumentsForSelection('#emailMemberInstrumentSelector', next, true);
+          performanceSetIdSelected();
         });
       </script>
     <% end %>
