Fix sending email from home and other JS gotchas

--- a/app/views/emails/_form.html.erb
+++ b/app/views/emails/_form.html.erb
@@ -56,7 +56,7 @@
           <% if @email.ensemble %>
             ensembleIdSelected();
           <% elsif @email.performance_set %>
-            performanceSetIdSelected();
+            perfSetIdSelected();
           <% end %>
         });
       </script>
@@ -69,7 +69,7 @@
         }
         $(document).on('ready', function() {
           setInstrumentsForSelection('#emailMemberInstrumentSelector', next, true);
-          performanceSetIdSelected();
+          perfSetIdSelected();
         });
       </script>
     <% end %>
