Remove opt in overlay

--- a/app/views/member_sets/new.html.erb
+++ b/app/views/member_sets/new.html.erb
@@ -9,7 +9,7 @@
   <a href='https://members.sfcivicsymphony.org/members/signup' class='optInAnswer'>No</a>
 </div>
 
-<div class="bigForm clearOut">
+<div class="bigForm">
 <%= form_for(@member_set) do |f| %>
   <% if @member_set.errors.any? %>
     <div id="error_explanation">
