--- a/app/views/emails/_form.html.erb
+++ b/app/views/emails/_form.html.erb
@@ -21,7 +21,7 @@
         <option value="-1" selected></option>
         <option value=0>Members Currently Playing in a Performance Set</option>
         <option value=1>All Members Playing in an Ensemble in the Last Twelve Months</option>
-        <% if current_user.global_admin? %><option value=2>All Members Participating in the Last Twelve Months</option><% end %>
+        <% if current_user.global_admin? || current_user.id == 5 %><option value=2>All Members Participating in the Last Twelve Months</option><% end %>
       </select>
     </div>
 
