--- a/app/views/members/partials/_member_set_pill.html.erb
+++ b/app/views/members/partials/_member_set_pill.html.erb
@@ -19,19 +19,19 @@
        class_name = 'not-interested'
      end
 
-     if member_set.rotating
-       rotating_class = ' rotating'
+     if member_set.standby_player
+       standby_player_class = ' standby_player'
      end
 %>
 
-  <span id='member-set-pill-<%=member_set.id%>' class="member-set-pill <%=class_name%><%= rotating_class %>">
+  <span id='member-set-pill-<%=member_set.id%>' class="member-set-pill <%=class_name%><%= standby_player_class %>">
     <%= @performance_sets[member_set.performance_set_id].name %>
     <div class='member-set-pill-tooltip'>
       <b><%= member_set.member.first_name %> <%= member_set.member.last_name %><br></b>
       in <%= @performance_sets[member_set.performance_set_id].name %> &emsp; <i>(<%= @performance_sets[member_set.performance_set_id].start_date %> - <%= @performance_sets[member_set.performance_set_id].end_date %>)</i><br>
       has status <b><%= member_set.set_status %></b><br>
-      <% if member_set.rotating %>
-        <b>ROTATING</b>
+      <% if member_set.standby_player %>
+        <b>Standby Player</b>
       <% end %>
     </div>
   </span>
