--- a/app/views/performance_sets/_form.html.erb
+++ b/app/views/performance_sets/_form.html.erb
@@ -77,6 +77,7 @@
   </div>
 
   <h3 class="formHeader">Instruments</h3>
+  <br><i>Don't forget to include Conductor!</i>
   <% if @performance_set.new_record? %>
     <% psin = 0 %>
     <%= f.fields_for :performance_set_instruments do |psi_f| %>
