--- a/app/views/emails/_form.html.erb
+++ b/app/views/emails/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(email) do |f| %>
+<%= form_for email, :html => { multipart: true } do |f| %>
   <% if email.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(email.errors.count, "error") %> prohibited this email from being saved:</h2>
@@ -100,6 +100,32 @@
       <b><%= f.label :email_body %></b>
       <%= f.text_area :email_body, cols: 100, rows: 15 %>
     </div>
+
+    <br><br>
+    <b>Attachments:</b><br>
+    <ul>
+    <li><i>Attachments must be PDF, Images, Excel, or Word Documents only, and each must be under 5MB.</i>
+    <li><i>Do not include more than 20MB total in attachments, or the email may be rejected by some servers.</i><br>
+    </ul>
+    <% if email.attachments.present? %>
+      <% email.attachments.each do |attachment| %>
+        <div>
+          <a href='<%= URI.join(request.url, attachment.file.url) %>'><%= attachment.file_file_name %></a> –
+          <%= link_to attachment, method: :delete, remote: true, data: { confirm: 'Are you sure?' }, class: "delAttach#{attachment.file_file_name}" do %>
+            <i style='color: gray'>Delete Attachment</i>
+          <% end %>
+        </div>
+      <% end %>
+      <div class="field">
+        Add more attachments:
+        <%= file_field_tag "files[]", type: :file, multiple: true %>
+      </div>
+    <% else %>
+      <div class="field">
+        Add attachments (can select multiple):
+        <%= file_field_tag "files[]", type: :file, multiple: true %>
+      </div>
+    <% end %>
   </div>
 
   <%= f.hidden_field :user_id, value: current_user.id %>
