--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,6 +4,10 @@
     <title>Members</title>
     <%= csrf_meta_tags %>
 
+    <script
+      src="//d2wy8f7a9ursnm.cloudfront.net/bugsnag-3.min.js"
+      data-apikey="8c77d55aa58868c382d1c16c35c6a652"></script>
+
     <%= stylesheet_link_tag    'application', media: 'all' %>
     <%= javascript_include_tag 'application'%>
   </head>
